@@ -20,8 +20,9 @@
  - Keep the leading ":" in server events passed to plugins.
  - Added xchat_hook_socket to plugin interface.
  - Fixed color paste.
- - Send DCC filenames in system encoding.
  - Added a character set selector to the serverlist.
+ - Send DCC filenames in system encoding (gets converted if a charset
+   is chosen in the serverlist).
  - 
  - 
 
